<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>

    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="fail.toepic.tweeeeting.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <Switch
            android:id="@+id/notification_on_off"
            android:text="@string/notification"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            />
        <Switch
            android:id="@+id/floating_on_off"
            android:text="@string/floating"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@id/notification_on_off"
            app:layout_constraintStart_toEndOf="@id/notification_on_off"
            />
        <View
            android:id="@+id/guide_one"
            style="@style/horizontal_guild"
            app:layout_constraintTop_toBottomOf="@id/notification_on_off"
            />


        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="flagNoExtractUi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gen"
            app:layout_constraintTop_toBottomOf="@id/guide_one"
            android:layout_marginStart="@dimen/textcaption_margin"

            />
        <TextView
            android:labelFor="@id/text"
            android:text="@string/inputtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/guide_one"
            android:textAllCaps="true"
            android:textSize="@dimen/text_caption_size"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/guide_width"
            app:layout_constraintStart_toStartOf="@id/text"
            tools:ignore="SpUsage" />

        <Button
            style="@style/ColorButton.minimize"
            android:text="@string/gen"
            android:id="@+id/gen"
            app:layout_constraintTop_toBottomOf="@id/guide_one"
            app:layout_constraintStart_toEndOf="@id/text"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <RadioGroup
            android:id="@+id/gen_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text"
            >
            <RadioButton
                style="@style/RadioCaption"
                android:id="@+id/fixed"
                android:text="@string/fixed"
                />
            <RadioButton
                style="@style/RadioCaption"
                android:id="@+id/increase"
                android:text="@string/increase"
                />
            <RadioButton
                style="@style/RadioCaption"
                android:id="@+id/decrease"
                android:text="@string/decrease"
                />
            <RadioButton
                style="@style/RadioCaption"
                android:id="@+id/formatted"
                android:text="@string/formatted"
                />
        </RadioGroup>


        <View
            android:id="@+id/guide_two"
            style="@style/horizontal_guild"
            app:layout_constraintTop_toBottomOf="@id/gen_mode"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>
</layout>